Add CSS to center screen on mobile Add CSS to center screen on mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Proton Pandas</title>
+  <link rel="stylesheet" href="css/style.css">
+  <style>
+    /* Center the header content */
+    header {
+      text-align: center;
+    }
+
+    /* Center the main content */
+    .container {
+      max-width: 100%;
+      padding: 0 15px;
+      margin: 0 auto;
+    }
+
+    /* Center the footer content */
+    footer {
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Proton Pandas</title>
     <meta charset="UTF-8" />
@@ -28,28 +56,28 @@
             rel="noopener noreferrer"
           >
   
-            <center><img src="images/header/pda-favicon-32x32.png" alt="alcor exchange" /></center><p>Provide Liquidity</p>
+            <center><img src="images/header/pda-favicon-32x32.png" alt="alcor exchange" /></center><p style="color: lightblue;">Provide Liquidity</p>
           </a>
           <a
             href="https://twitter.com/protonpandas"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/x-favicon-16x16.png" /><p>X.com</p>
+            <img src="images/header/x-favicon-16x16.png" /><p style="color: lightblue;">X.com</p>
           </a>
           <a
             href="https://soon.market/collections/144534352512"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/soon-market-favicon-16x16.png" /><p>Soon.Market</p>
+            <img src="images/header/soon-market-favicon-16x16.png" /><p style="color: lightblue;">Soon.Market</p>
           </a>
           <a
             href="https://t.me/+lPYmNDvlKAFlNzRh"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/telegram-favicon-16x16.png" /><p>Telegram</p>
+          <img src="images/header/telegram-favicon-16x16.png" /><p style="color: lightblue;">Telegram</p>
           </a>
           <html>
   <head>
@@ -422,4 +450,6 @@
     <script src="js/countdown.js"></script>
     <script src="js/app.js"></script>
   </body>
+</html>
+</body>
 </html>
