--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- favicon -->
+  <!-- favicon & css -->
   <link rel="icon" href="images/x-icon/og-panda-transparent.png" sizes="180x180">
   <link rel="icon" type="image/png" sizes="32x32" href="images/x-icon/og-panda-transparent.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/x-icon/og-panda-transparent.png">
@@ -15,144 +15,146 @@
 
   <!-- Proton SDK -->
   <script src="https://unpkg.com/@proton/web-sdk@4.1.4"></script>
+
   <style>
-    #denied-message {
-      display: none;
+    body {
+      background: #151517;
+      min-height: 100vh;
+      margin: 0;
+    }
+    #gate-cover {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background: #111;
       position: fixed;
-      top:0; left:0; right:0; bottom:0;
-      z-index: 3000;
-      background: rgba(255,255,255,0.985);
-      color: red;
-      text-align: center;
-      padding: 6em 0 2em 0;
-      font-size: 2rem;
+      inset: 0;
+      z-index: 9000;
     }
     #connect-btn {
       background-color: #6b46c1;
       color: #fff;
-      padding: 12px 24px;
-      font-size: 16px;
+      padding: 16px 32px;
+      font-size: 22px;
       cursor: pointer;
       border: none;
       border-radius: 6px;
-      margin: 10px 20px;
+      margin: 0 auto 2rem auto;
       transition: background 0.2s;
+      display: block;
     }
-    #connect-btn:hover { background-color: #553c9a; }
-    .green-button {
-      display: inline-block;
-      padding: 10px 30px;
-      background-color: green;
-      color: yellow;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      text-decoration: none;
+    #connect-btn:hover { background: #553c9a; }
+    #denied-message {
+      display: none;
+      color: #fff;
+      background: #252525;
+      border-radius: 12px;
+      padding: 2rem;
+      font-size: 1.8rem;
+      text-align: center;
+      margin: 1.5rem auto 0 auto;
+      box-shadow: 0 3px 32px #0009;
     }
-    .green-button:hover { background-color: darkgreen; }
+    /* When unlocked, allow scroll/content: */
+    body.unlocked #gate-cover { display: none !important; }
+    body.unlocked #main-content { display: block !important; }
+    #main-content { display: none; }
   </style>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <div class="logo">
-        <a href="/"><img src="images/x-icon/favicon.ico" alt="logo" /></a>
-      </div>
-      <div class="menu">
-        <!-- Connect Wallet Button -->
-        <button id="connect-btn">Connect Wallet</button>
-
-        <a href="https://proton.alcor.exchange/positions/new?left=xpr-eosio.token&right=pda-xprpandas" target="_blank" rel="noopener noreferrer">
-          <center><img src="images/header/pda-favicon-32x32.png" alt="alcor exchange" /></center><p>Provide Liquidity</p>
-        </a>
-        <a href="https://twitter.com/protonpandas" target="_blank" rel="noopener noreferrer">
-          <img src="images/header/x-favicon-16x16.png" /><p>X.com</p>
-        </a>
-        <a href="https://soon.market/collections/144534352512" target="_blank" rel="noopener noreferrer">
-          <img src="images/header/soon-market-favicon-16x16.png" /><p>Soon.Market</p>
-        </a>
-        <a href="https://t.me/+lPYmNDvlKAFlNzRh" target="_blank" rel="noopener noreferrer">
-          <img src="images/header/telegram-favicon-16x16.png" /><p>Telegram</p>
-        </a>
-      </div>
+  <!-- The entire site is covered until wallet passes the gate -->
+  <div id="gate-cover">
+    <button id="connect-btn">Connect Wallet</button>
+    <div id="denied-message">
+      <h2>Access Denied</h2>
+      <p>❌ You need ≥ 555,555 PDA tokens to access this content.</p>
     </div>
-  </header>
+  </div>
 
-  <h2><center><img src="images/header/protonpanda-gif.gif"></center></h2>
-  <section class="container">
-    <div class="owner-status"></div>
-    <div class="countdown">
-      <h1>Pandania NFT DaPP Coming Soon!!</h1>
-      <p>For now try kill time by playing Pandee Hero!</p>
-      <a href="https://flappycreator.com/flappy.php?id=66f90f9e9ad5f" class="green-button" target="_blank">Play Pandee Hero</a>
-      <br>
-      <p>Launched on January 10th, 2022. One of the few remaining (OG) NFT collections on XprNetwork.</p>
-      <p>There will only ever be 200 ProtonPanda NFTs in circulation.</p>
-      <p>NFT Rarity: 80-Common(40%) | 50-Uncommon(25%) | 30-Epic(15%) | 25-Rare(12.5%) | 15-Ultra Rare(7.5%)</p>
-      <a href="https://soon.market/collections/144534352512" class="green-button" target="_blank">Proton Pandas NFT Collection</a>
-      <br>
-      <p>Token Launched on June 1st, 2023. Only active cryptocurrency donating to World WildLife Foundation and environmental conservation on XprNetwork.</p>
-      <h3><center><img src="images/x-icon/pda-xprpanda-65x65.png"></center></h3>
-      <h2>Buy on Alcor Exchange</h2>
-      <iframe src="https://proton.alcor.exchange/trade/pda-xprpandas_xpr-eosio.token" width="445" height="600"></iframe>
-      <a href="https://proton.alcor.exchange/swap?input=XPR-eosio.token&output=PDA-xprpandas" class="green-button" target="_blank">Swap PDA</a>
-      <br>
-      <p>Or</p>
-      <a href="https://blastpad.io/staking-pool?poolId=33" class="green-button" target="_blank">Stake PDA</a>
-      <br>
-      <p>Total Capped Supply 555,555,555 Tokens.</p>
-      <p>100% Of Supply In Circulation.</p> 
-      <img src="images/header/Token-Pi.png">
-      <p>The Token Distribution for PDA is as follows: 65% to PandaVault liquidity, 15% to Xprpandas wallet (for community and events), 15% to the founder, and 5% to community airdrop.</p>
-      <a href="https://explorer.xprnetwork.org/tokens/PDA-proton-xprpandas" class="green-button" target="_blank">(PDA) XPRNetwork Explorer info</a>
-      <br>
-      <p>PDA Pandacoin is a Utility Token used to empower a decentralized commnunity on XPRNetwork.</p>
-      <a href="https://t.me/+lPYmNDvlKAFlNzRh" target="_blank" rel="noopener noreferrer" class="hero-btn btn"><span>Join the #PandaFam</span></a>
-      <br>
-      <h2><center>$200 In Total Donations To Date.</center></h2>
-      <h3><center>Donated to The World WildLife Foundation</center></h3>
-      <img src="images/header/Conservation-planet.png">
-      <center>
-        <img src="images/header/Donation-Wwf.jpeg">
-        <img src="images/header/Donation-Wwfl.png">
-      </center>
-    </div>
-  </section>
-
-  <!-- Token Gate Overlay -->
-  <div id="denied-message">
-    <h2>Access Denied</h2>
-    <p>❌ You need ≥ 555,555 PDA tokens to access this content.</p>
+  <!-- The ACTUAL site content, hidden until access granted -->
+  <div id="main-content">
+    <header>
+      <div class="container">
+        <div class="logo">
+          <a href="/"><img src="images/x-icon/favicon.ico" alt="logo" /></a>
+        </div>
+        <div class="menu">
+          <a href="https://proton.alcor.exchange/positions/new?left=xpr-eosio.token&right=pda-xprpandas" target="_blank" rel="noopener noreferrer">
+            <center><img src="images/header/pda-favicon-32x32.png" alt="alcor exchange" /></center><p>Provide Liquidity</p>
+          </a>
+          <a href="https://twitter.com/protonpandas" target="_blank" rel="noopener noreferrer">
+            <img src="images/header/x-favicon-16x16.png" /><p>X.com</p>
+          </a>
+          <a href="https://soon.market/collections/144534352512" target="_blank" rel="noopener noreferrer">
+            <img src="images/header/soon-market-favicon-16x16.png" /><p>Soon.Market</p>
+          </a>
+          <a href="https://t.me/+lPYmNDvlKAFlNzRh" target="_blank" rel="noopener noreferrer">
+            <img src="images/header/telegram-favicon-16x16.png" /><p>Telegram</p>
+          </a>
+        </div>
+      </div>
+    </header>
+    <h2><center><img src="images/header/protonpanda-gif.gif"></center></h2>
+    <section class="container">
+      <div class="owner-status"></div>
+      <div class="countdown">
+        <h1>Pandania NFT DaPP Coming Soon!!</h1>
+        <p>For now try kill time by playing Pandee Hero!</p>
+        <a href="https://flappycreator.com/flappy.php?id=66f90f9e9ad5f" class="green-button" target="_blank">Play Pandee Hero</a>
+        <br>
+        <p>Launched on January 10th, 2022. One of the few remaining (OG) NFT collections on XprNetwork.</p>
+        <p>There will only ever be 200 ProtonPanda NFTs in circulation.</p>
+        <p>NFT Rarity: 80-Common(40%) | 50-Uncommon(25%) | 30-Epic(15%) | 25-Rare(12.5%) | 15-Ultra Rare(7.5%)</p>
+        <a href="https://soon.market/collections/144534352512" class="green-button" target="_blank">Proton Pandas NFT Collection</a>
+        <br>
+        <p>Token Launched on June 1st, 2023...</p>
+        <h3><center><img src="images/x-icon/pda-xprpanda-65x65.png"></center></h3>
+        <h2>Buy on Alcor Exchange</h2>
+        <iframe src="https://proton.alcor.exchange/trade/pda-xprpandas_xpr-eosio.token" width="445" height="600"></iframe>
+        <a href="https://proton.alcor.exchange/swap?input=XPR-eosio.token&output=PDA-xprpandas" class="green-button" target="_blank">Swap PDA</a>
+        <br>
+        <p>Or</p>
+        <a href="https://blastpad.io/staking-pool?poolId=33" class="green-button" target="_blank">Stake PDA</a>
+        <br>
+        <p>Total Capped Supply 555,555,555 Tokens.</p>
+        <p>100% Of Supply In Circulation.</p>
+        <img src="images/header/Token-Pi.png">
+        <p>The Token Distribution for PDA is as follows: 65% to PandaVault liquidity, 15% to Xprpandas wallet (for community and events), 15% to the founder, and 5% to community airdrop.</p>
+        <a href="https://explorer.xprnetwork.org/tokens/PDA-proton-xprpandas" class="green-button" target="_blank">(PDA) XPRNetwork Explorer info</a>
+        <br>
+        <p>PDA Pandacoin is a Utility Token used to empower a decentralized commnunity on XPRNetwork.</p>
+        <a href="https://t.me/+lPYmNDvlKAFlNzRh" target="_blank" rel="noopener noreferrer" class="hero-btn btn"><span>Join the #PandaFam</span></a>
+        <br>
+        <h2><center>$200 In Total Donations To Date.</center></h2>
+        <h3><center>Donated to The World WildLife Foundation</center></h3>
+        <img src="images/header/Conservation-planet.png">
+        <center>
+          <img src="images/header/Donation-Wwf.jpeg">
+          <img src="images/header/Donation-Wwfl.png">
+        </center>
+      </div>
+    </section>
   </div>
 
   <script>
     window.addEventListener("DOMContentLoaded", () => {
       const connectBtn = document.getElementById("connect-btn");
       const deniedMessage = document.getElementById("denied-message");
-      const menu = document.querySelector('.menu');
-      const container = document.querySelector('section.container');
 
-      function showGate(allowed) {
-        deniedMessage.style.display = allowed ? 'none' : 'block';
-        if(!allowed){
-          if(container) container.style.filter = "blur(2px)";
-          if(menu) menu.style.filter = "blur(2px)";
-        }else{
-          if(container) container.style.filter = "";
-          if(menu) menu.style.filter = "";
-        }
-      }
+      // Hide the entire site until allowed
+      document.getElementById('main-content').style.display = "none";
+      deniedMessage.style.display = "none";
 
       async function checkPDABalance(session) {
         try {
           const response = await fetch(
-            "https://proton.greymass.com/v1/chain/get_currency_balance", // Mainnet endpoint!
+            "https://proton.greymass.com/v1/chain/get_currency_balance", // mainnet endpoint!
             {
               method: "POST",
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({
-                code: "xprpandas",          // PDA's contract (mainnet)
+                code: "xprpandas",
                 account: session.auth.actor,
                 symbol: "PDA",
               }),
@@ -170,6 +172,7 @@
       }
 
       connectBtn.addEventListener("click", async () => {
+        deniedMessage.style.display = "none";
         try {
           const { session } = await window.ProtonWebSDK({
             linkOptions: {
@@ -191,11 +194,12 @@
           const hasAccess = await checkPDABalance(session);
 
           if (hasAccess) {
-            deniedMessage.style.display = "none";
-            connectBtn.style.display = "none";
-            showGate(true);
+            document.body.classList.add("unlocked");
+            document.getElementById('main-content').style.display = "block";
+            // Hide gating UI for good
+            document.getElementById("gate-cover").style.display = "none";
           } else {
-            showGate(false);
+            deniedMessage.style.display = "block";
             connectBtn.style.display = "none";
           }
         } catch (err) {
